--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ textarea {
     padding: 0px;
     margin: 0px;
     border: 0px;
-    font-family: Bebas;
+    font-family: 'Bebas';
 }
 
 html {
@@ -275,6 +275,23 @@ section.slide-show {
     top: 160px;
 }
 
+.slide-show-text {
+    background: #e8663c;
+    opacity: 0.8;
+    max-width: 43.9361702%;
+    height: 124px;
+    position: absolute;
+    bottom: 32px;
+    left: 36px;
+    color: #fff;
+}
+
+.slide-show-text h2, .slide-show-text p {
+    margin: 20px 20px;
+}
+
+
+
 section.thumb {
     overflow: hidden;
 }
@@ -381,7 +398,7 @@ footer {
 
 footer .content {
     background: #e8663c;
-    width: 940px;
+    max-width: 100%;
     padding-bottom: 20px;
 }
 
@@ -441,6 +458,18 @@ footer .col-3 img {
         top: 140px;
     }
 
+    .slide-show-text {
+        max-width: 100%;
+        height: 90px;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+    }
+
+    .slide-show-text h2{
+        margin: 10px 20px;
+    }
+
     section.thumb .grid {
         padding-left: 10.6382979%;
         margin: 0 auto;
@@ -471,6 +500,33 @@ footer .col-3 img {
     section.recent-works .recent-works-content {
         margin: 0px 8% 20px 8%;
     }
+
+
+    footer .col-3 {
+    max-width: 40%;
+    }
+}
+
+@media only screen and (max-width : 740px) {
+
+    section.recent-works {
+    }   
+
+    .recent-works-container {
+        max-width: 100%;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+
+    section.recent-works .recent-works-content {
+        margin: 0px 5% 20px 5%;
+    }
+
+    footer .col-3 {
+    max-width: 90%;
+    margin: 0 auto;
+    float: none;
+    }
 }
 
 @media only screen and (max-width : 635px) {
@@ -494,6 +550,7 @@ footer .col-3 img {
         padding-left: 3.6382979%;
         margin: 0 auto;
     }
+
 
     section.blog {
         padding-top: 20px;
@@ -521,16 +578,97 @@ footer .col-3 img {
         width: 90%;
     }
 }
+
+@media only screen and (max-width : 570px) {
+
+    .recent-works-container {
+        max-width: 50%;
+    }
+
+    section.recent-works .recent-works-content {
+        margin: 0px 5% 20px 5%;
+    }
+}
+
+@media only screen and (max-width : 496px) {
+    section.slide-show {
+        height: 240px;
+    }
+
+    .slide-show .sliderleft {
+        position: absolute;
+        left: 0px;
+        top: 30px;
+    }
+
+    .slide-show .sliderright {
+        position: absolute;
+        right: 0px;
+        top: 30px;
+    }
+
+        .slide-show-text {
+            display: none;
+        }
+
+    .slide-show-text h2{
+        margin: 10px 20px;
+    }
+
+    section.thumb .grid {
+        margin-left: 20px;
+    }
+
+    section.thumb .col-sm-3 {
+        float: left;
+        margin: 5px;
+        width: 140px;
+    }
+
+
+
+    section.recent-works {
+        float: none;
+    }
+
+    section.recent-works .recent-works-container {
+        margin-left: 0px;
+        max-width: 100%;
+        margin-left: 40px;
+    }
+}
+
+@media only screen and (max-width : 431px) {
+    section.slide-show {
+        height: 150px;
+    }
+
+        section.thumb .grid {
+        margin-left: 0px;
+    }
+
+    
+    section.thumb .col-sm-3 {
+        width: 140px;
+        margin: 1px;
+    }
+
+    section.blog .div-blog h3 {
+        height: 80px;
+    }
+}
 /* ==========================================
                 Fonts
    ========================================== */
 
-
-
-@font-face{ 
-    font-family: Bebas;
-    src: url(../font/bebas/BEBAS___.TTF);
+@font-face {
+  font-family: 'Bebas';
+  src: url('../font/Bebas/Bebas.eot?#iefix') format('embedded-opentype'),  url('../font/Bebas/Bebas.woff') format('woff'), url('../font/Bebas/Bebas.ttf')  format('truetype'), url('../font/Bebas/Bebas.svg#Bebas') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
