--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ fieldset {
  */
 
 textarea {
-    resize: vertical;
+    resize: none;
 }
 
 /* ==========================================================================
@@ -115,7 +115,6 @@ body {
     max-width: 940px;
     background: url(../img/background.png);
     margin: 0 auto;
-    overflow: hidden;
 }
 
 h1 {
@@ -272,10 +271,10 @@ main {
 }
 
 section.contents {
-    max-width: 69.36170213%;
+    /*720px*/
+    max-width: 71.276596%; /*670px*/
     float: left; 
-    padding-right: 7.2340426%;
-    overflow: hidden;
+    padding-right: 50px; /*50px*/
 }
 
                                                 /* ==========================================
@@ -308,8 +307,7 @@ section.slide-show {
 }
 
 .slide-show-text {
-    background: #e8663c;
-    opacity: 0.8;
+    background: rgba(232, 102, 60, 0.8);
     max-width: 43.9361702%;
     height: 124px;
     position: absolute;
@@ -415,8 +413,12 @@ section.recent-works h3 {
     border-bottom: 1px solid #dbdbdb;
 }
 
+.recent-works-text h4 {
+    margin-left: 5px;
+}
+
 .recent-works-text p {
-    margin-top: 5px;
+    margin: 5px 0px 0px 5px;
     color: #e8663c;
     font-size: 1.1rem;
     font-family: 'Bebas';
@@ -424,7 +426,7 @@ section.recent-works h3 {
 
 
                                                 /* ==========================================
-                                                                       Home=page
+                                                                       About.html
                                                 ========================================== */
 
 /* ==========================================
@@ -435,13 +437,19 @@ img.me {
     float: left;
     margin-right: 2.765958%;
     margin-top: 28px;
+    padding: 2px;
+    border: solid 1px #cfcfcf;
 }
 
 p.about-us {
     margin-top: 28px;
     font-size: 1.2rem;
     color: #414141;
-}    
+}  
+
+p.about-us:nth-child(7) {
+    color: #737373;
+}  
     
 .about-us span {
     font-weight: bold;
@@ -508,6 +516,116 @@ p.about-us {
     border: 1px solid #4d8fcb;
 }
 
+                                            /* ==========================================
+                                                                       Blog.html
+                                                ========================================== */
+
+/* ==========================================
+                apps
+   ========================================== */
+
+.blogpost {
+    margin-top: 28px;
+    position: relative;
+}
+
+.blogpost .iconblog {
+    position: absolute;
+    top: 0px;
+    left: -85px;
+}
+
+.blogpost .info {
+    width: 20%; /*144px*/
+    float: left;
+}
+
+.info h5:nth-child(1) {
+    margin-top: 28px;
+}
+
+.info p {  
+    color: #bababa;
+    margin: 5px 0px 17px 0px;
+}
+
+.blogpost .explain {
+    max-width: 80%;
+    float: left;
+    margin-bottom: 45px;
+}
+
+.explain h3 {
+    margin: 22px 0px;
+}
+
+.explain p {
+    margin-bottom: 22px;
+}
+
+.border-bottom {
+    background: url(../img/shade.gif);
+    height: 19px;
+    max-width: 100%;
+    clear: both;
+}
+
+.quote {
+    padding: 20px 0px 0px 34px;
+    height: 56px;
+    max-width: 100%;
+    background: #f3f3f3;
+    margin-bottom: 25px;
+}
+
+.quote span {
+    font-size: 7.2rem;
+    font-family: Georgia;
+    color: #e8663c;
+    float: left;
+    line-height: 55px;
+    margin-right: 19px;
+}
+
+h3.last-h3 {
+    margin: 0px;
+}
+
+.explain a {
+    font-family: Helvetica;
+    font-size: 1.2rem;
+    color: #b4b4b4;
+    padding-bottom: 40px;
+}
+
+.explain a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+p.last-p {
+    margin: 20px 0px 0px 0px;
+}
+
+.nav-blog {
+    margin: 30px 0px;
+}  
+
+.nav-blog li {
+    display: inline-block;
+    margin-right: 4px;
+}
+
+.nav-blog a {
+    padding: 5px 9px;
+    color: #ffffff;
+    background: #f3b29d;
+}
+
+.nav-blog .active {
+    background: #e8663c;
+}
+
 /* ==========================================
                 Aside
    ========================================== */
@@ -557,6 +675,182 @@ aside {
     margin-right: 0px;
 }
 
+                                            /* ==========================================
+                                                                    Portfolio.html
+                                                ========================================== */
+/* ==========================================
+               Portfolio
+   ========================================== */
+.nav-portfolio {
+    margin-top: 35px;
+}
+
+.nav-portfolio li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.nav-portfolio a {
+    color: #b9b9b9;
+    padding: 5px 7px;
+    font-size: 1.4rem;
+}
+
+.nav-portfolio .active {
+    background: #ea5c36;
+    color: #ffffff;
+}
+
+.portfolio-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.portfolio-container .recent-works-content {
+    position: relative;
+    float: left;
+}
+
+
+.plus {
+    opacity: 0;
+    position: absolute;
+    top: 80px;
+    left: 80px;
+}
+
+.imagehover img:hover {
+    opacity: 0.2;
+    z-index: 1px;
+    cursor: pointer;
+}
+
+.imagehover:hover {
+    background: #000000;
+}
+
+.imagehover:hover .plus {
+    opacity: 1;
+    transition: 0.5s;
+    background: black;
+    z-index: 3px;
+}
+
+img.plus:hover .imagehover {
+    background: #000000;
+}
+
+                                            /* ==========================================
+                                                                slider-plugin.html
+                                                ========================================== */
+/* ==========================================
+               Slider-plugin
+   ========================================== */
+section.portfolio-page {
+    padding-top: 24px;
+}
+
+.portfolio-page p {
+    color: #929292;
+    margin-top: 25px;
+}
+
+section.related-items {
+    margin-top: 53px;
+}
+
+.related-items h3 {
+    float: left;
+}
+
+.related-items .recent-works-background {
+    width: 84%;
+}
+
+                                               /* ==========================================
+                                                                contact.html
+                                                ========================================== */
+/* ==========================================
+               Contact Us
+   ========================================== */
+section.contact {
+    margin-top: 25px;
+}
+
+.contact .map {
+    margin-bottom: 36px;
+}
+
+.contact-info {
+    width: 28.32%; /*177px;*/
+    float: left;
+    margin-right: 5.44%;
+    color: #838383;
+} 
+
+.contact-info h6 {
+    margin-top: 14px;
+    font-family: Helvetica;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #e8603c;
+}
+
+.contact-info .tel-email {
+    margin-top: 15px;
+}
+
+.form {
+    float: left;
+}
+
+.form form input {
+    width: 210px;
+    padding-left: 5px;
+    height: 33px;
+    background: #ffffff;
+    color: #e8603c;
+    border: 1px solid #e8603c;
+    margin-bottom: 10px;
+}
+
+.form form input[placeholder],
+    [placeholder],
+    *[placeholder] {
+      color: #e8603c !important;
+    }
+
+.form ::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #e8603c;
+}
+
+.form :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #e8603c;
+   opacity:  1;
+}
+
+.form ::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #e8603c;
+   opacity:  1;
+}
+
+.form :-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:    #e8603c;
+}
+
+.form form textarea {
+    border: 1px solid #e8603c;
+    padding: 5px;
+}
+
+.form form .submit {
+    height: 31px;
+    padding: 5px 10px 5px 10px;
+    background: #e8603c;
+    color: #ffffff;
+    margin-top: 10px;
+    width: 67px;
+}
 /* ==========================================
                 Footer
    ========================================== */
@@ -625,6 +919,13 @@ footer .col-3 img {
 
     section.thumb .col-sm-3:last-of-type, section.thumb .col-sm-3:nth-child(3) {
         width: 140px;
+    }
+
+    section.contents {
+        max-width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+
     }
 }
 
@@ -703,7 +1004,7 @@ footer .col-3 img {
     }
 }
 
-@media only screen and (max-width : 635px) {
+@media only screen and (max-width : 664px) {
     section.slide-show {
         height: 280px;
         margin-bottom: 100px;
@@ -748,7 +1049,7 @@ footer .col-3 img {
     }
 
     section.blog .div-blog h3 {
-        height: 50px;
+        height: 60px;
         margin-bottom: 5px;
     }
 
